# DetLog

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
apps/: detlog_node.cpp  detlog_sim.cpp
artifacts/: README.md  SHA256SUMS
artifacts/benchmarks/cluster/: SHA256SUMS  environment.json  matrix.json  summary.csv
artifacts/benchmarks/cluster-smoke/: matrix.json  raw.jsonl  summary.csv
artifacts/benchmarks/runtime-fsync/: SHA256SUMS  matrix.json  summary.csv
artifacts/benchmarks/wal/: SHA256SUMS  matrix-manifest.json  summary-includes-nondurable.csv
artifacts/benchmarks/wal-smoke/: matrix-manifest.json  raw-includes-nondurable.jsonl  summary-includes-nondurable.csv
artifacts/traces/: ambiguous-retry-3node-seed45.jsonl  asymmetric-partition-5node-seed44.jsonl  leader-crash-restart-3node-seed42.jsonl  leader-crash-restart-5node-seed84.jsonl  manifest.json  saturation-3node-seed49.jsonl  slow-disk-3node-seed48.jsonl  slow-follower-5node-seed47.jsonl  symmetric-partition-3node-seed43.jsonl  torn-wal-3node-seed46.jsonl
bench/: detlog_bench.cpp  detlog_wal_bench.cpp
docs/: architecture.md  benchmark-results.md  benchmarks.md  fault-semantics.md  invariants.md  protocol.md  tcp-demo.md  testing.md
docs/postmortems/: 001-stale-candidate-election-deadlock.md
fuzz/: codec_fuzz.cpp  scenario_fuzz.cpp  wal_fuzz.cpp
include/detlog/: cluster.hpp  codec.hpp  model.hpp  node_host.hpp  raft.hpp  reference_model.hpp  simulator.hpp  state_machine.hpp  tcp_transport.hpp  wal.hpp
scripts/: capture_benchmark_environment.ps1  capture_benchmark_environment.sh  generate_trace_corpus.ps1  generate_trace_corpus.sh  package_benchmark_artifacts.py  plot_bench.py  plot_wal_bench.py  run_bench_matrix.ps1  run_bench_matrix.sh  run_checkpointed_campaign.py  run_runtime_fsync_matrix.ps1  run_runtime_fsync_matrix.sh  run_wal_bench_matrix.ps1  run_wal_bench_matrix.sh  validate_benchmark_artifacts.py  verify.ps1  verify.sh
src/: cluster.cpp  codec.cpp  node_host.cpp  raft.cpp  reference_model.cpp  simulator.cpp  state_machine.cpp  tcp_transport.cpp  wal.cpp
tests/: checkpoint_runner_tests.py  cluster_tests.cpp  failure_history_tests.cpp  node_host_group_commit_tests.cpp  node_host_partition_tests.cpp  node_host_tests.cpp  process_crash_tests.cpp  property_tests.cpp  raft_tests.cpp  reference_model_tests.cpp  simulator_tests.cpp  tcp_transport_tests.cpp  wal_tests.cpp
